# huqsv-urlshortener

./: .coveragerc  .env.db  Dockerfile  README.md  Readme.md  conf.py  db.sqlite3  docker-compose.yaml  entrypoint.sh  index.rst  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
docs/: conf.py  flowdiagram.rst  index.rst  project.rst  urlshortener.migrations.rst  urlshortener.tests.rst
docs/_build/doctrees/: conf.doctree  environment.pickle  index.doctree  manage.doctree  modules.doctree  shorturl.doctree  urlshortener.doctree  urlshortener.migrations.doctree  urlshortener.tests.doctree
docs/_build/linkcheck/: output.json
shorturl/: settings.py  urls.py
urlshortener/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
urlshortener/migrations/: 0001_initial.py  0002_shorturl_created_by_alter_shorturl_short_url.py
urlshortener/static/urlshortener/css/: styles.css
urlshortener/templates/registration/: login.html
urlshortener/templates/urlshortener/: home.html  login.html  saved_urls.html  success.html  test_results.html
urlshortener/tests/: test_forms.py  test_models.py  test_views.py
